user and admin login

--- a/views/admin_login.ejs
+++ b/views/admin_login.ejs
@@ -11,13 +11,13 @@
 
 
    <main>
-   <form method="post" action="home">
+   <form method="post" action="dashboard">
 
    </form>
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <img class="mx-auto h-10 w-auto" src="/" alt="OneCart">
-    <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
+    <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Account Login</h2>
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
@@ -46,10 +46,6 @@
       </div>
     </form>
 
-    <p class="mt-10 text-center text-sm text-gray-500">
-      Not a member?
-      <a href="/signup" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Create new Account</a>
-    </p>
   </div>
 </div>
    </main>
