--- a/views/notFound.ejs
+++ b/views/notFound.ejs
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div style="text-align: center;">
+        <h1 style="color: red;">Page not found</h1>
+    </div>
 </body>
 </html>
+
+
+
