--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -69,10 +69,10 @@
                     <div class="flex space-x-4">
                       <!-- Current: "bg-gray-900 text-white", Default: "text-gray-950 hover:bg-gray-700 hover:text-white" -->
                       <input class="rounded-full h-7 my-6 border-2 border-gray-300" type="text" placeholder="Search">
-                      <a href="#" class="text-gray-950 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5">Wishlist</a>
-                      <a href="#" class="text-gray-950 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5">Cart</a>
-                      <a href="#" class="text-gray-950 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5">User</a>
-                      <a href="#" class="text-gray-950 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5">Logout</a>
+                      <a href="/wishlist" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Wishlist</a>
+                      <a href="/cart" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Cart</a>
+                      <a href="#" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">User</a>
+                      <a href="/login" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Logout</a>
                     </div>
                   </div>
               <!-- Profile dropdown -->
@@ -111,173 +111,22 @@
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-950 hover:bg-gray-700 hover:text-white" -->
             <input class="rounded-full h-7 my-6 border-2 border-gray-300" type="text" placeholder="Search">
             <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Wishlist</a>
-            <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Cart</a>
+            <a href="/cart" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Cart</a>
             <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">User</a>
             <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Logout</a>
           </div>
         </div>
       </nav>
+      
 
-     <sidecar>
 
-<ul class="">
-    <li>sort by</li>
-    <li> price--Low to High</li>
-    <li>price--High to Low</li>
-    <li>Alphabetically, A-Z</li>
-</ul>
-<ul>
-    <li>sort by</li>
-    <li> price--Low to High</li>
-    <li>price--High to Low</li>
-    <li>Alphabetically, A-Z</li>
-</ul>
-<ul>
-    <li>Price</li>
-    <li>1000-5000</li>
-    <li> price--Low to High</li>
-    <li>price--High to Low</li>
-    <li>Alphabetically, A-Z</li>
-</ul>
-
-     </sidecar>
-
-     <section>
-        <div class="bg-white flex">
-            <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-                <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
-                    <!-- First Product -->
-                    <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                            <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket-2.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                        </div>
-                        <div class="mt-4 flex justify-between">
-                            <div>
-                                <h3 class="text-sm text-gray-700">
-                                    <a href="#">
-                                        <span aria-hidden="true" class="absolute inset-0"></span>
-                                        Basic Tee
-                                    </a>
-                                </h3>
-                                <p class="mt-1 text-sm text-gray-500">Black</p>
-                            </div>
-                            <p class="text-sm font-medium text-gray-900">$35</p>
-                        </div>
-                    </div>
-                    <!-- Second Product -->
-                    <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                            <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/ragbo4535819dd2_q1_2-0_8fc35ffb-cb17-4bd0-8dba-1bf9c36588e8.jpg?v=1652168845&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                        </div>
-                        <div class="mt-4 flex justify-between">
-                            <div>
-                                <h3 class="text-sm text-gray-700">
-                                    <a href="#">
-                                        <span aria-hidden="true" class="absolute inset-0"></span>
-                                        Second Tee
-                                    </a>
-                                </h3>
-                                <p class="mt-1 text-sm text-gray-500">Blue</p>
-                            </div>
-                            <p class="text-sm font-medium text-gray-900">$45</p>
-                        </div>
-                    </div>
-                    <!-- Third Product -->
-                    <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                            <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                        </div>
-                        <div class="mt-4 flex justify-between">
-                            <div>
-                                <h3 class="text-sm text-gray-700">
-                                    <a href="#">
-                                        <span aria-hidden="true" class="absolute inset-0"></span>
-                                        Third Tee
-                                    </a>
-                                </h3>
-                                <p class="mt-1 text-sm text-gray-500">Red</p>
-                            </div>
-                            <p class="text-sm font-medium text-gray-900">$55</p>
-                        </div>
-                    </div>
-             
-                </div>
-            </div>
-        </div>
+     <section class="h-14 text-center mt-3 p-4">
+        <span class="michroma-regular">YOUR CART</span>
     </section>
     
 
-    <section>
-        <div class="bg-white flex">
-            <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-1 lg:max-w-7xl lg:px-8">
-                <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
-                    <!-- First Product -->
-                    <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                            <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket-2.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                        </div>
-                        <div class="mt-4 flex justify-between">
-                            <div>
-                                <h3 class="text-sm text-gray-700">
-                                    <a href="#">
-                                        <span aria-hidden="true" class="absolute inset-0"></span>
-                                        Basic Tee
-                                    </a>
-                                </h3>
-                                <p class="mt-1 text-sm text-gray-500">Black</p>
-                            </div>
-                            <p class="text-sm font-medium text-gray-900">$35</p>
-                        </div>
-                    </div>
-                    <!-- Second Product -->
-                    <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                            <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/ragbo4535819dd2_q1_2-0_8fc35ffb-cb17-4bd0-8dba-1bf9c36588e8.jpg?v=1652168845&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                        </div>
-                        <div class="mt-4 flex justify-between">
-                            <div>
-                                <h3 class="text-sm text-gray-700">
-                                    <a href="#">
-                                        <span aria-hidden="true" class="absolute inset-0"></span>
-                                        Second Tee
-                                    </a>
-                                </h3>
-                                <p class="mt-1 text-sm text-gray-500">Blue</p>
-                            </div>
-                            <p class="text-sm font-medium text-gray-900">$45</p>
-                        </div>
-                    </div>
-                    <!-- Third Product -->
-                    <div class="group relative">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                            <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                        </div>
-                        <div class="mt-4 flex justify-between">
-                            <div>
-                                <h3 class="text-sm text-gray-700">
-                                    <a href="#">
-                                        <span aria-hidden="true" class="absolute inset-0"></span>
-                                        Third Tee
-                                    </a>
-                                </h3>
-                                <p class="mt-1 text-sm text-gray-500">Red</p>
-                            </div>
-                            <p class="text-sm font-medium text-gray-900">$55</p>
-                        </div>
-                    </div>
-                 
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="text-center mt-5">
-        <button class="rounded-full text-black font-mono w-32  border-2 border-black text-sm">Load More</button>
-    </section>
 
 
-
-   
     <footer class="bg-white ">
         <div class="mx-auto w-full max-w-screen-xl">
           <div class="grid grid-cols-2 gap-8 px-4 py-6 lg:py-8 md:grid-cols-4">
