--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -66,10 +66,11 @@
             <div class="hidden sm:ml-6 sm:block">
                 <div class="flex space-x-4">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-950 hover:bg-gray-700 hover:text-white" -->
-                  <input class="rounded-full h-7 my-6 border-2 border-gray-300" type="text" placeholder="Search">
+                  <input class="rounded-full h-7 my-6 border-2 border-gray-300" type="text">
+                  <a href="/search" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Search</a>
                   <a href="/wishlist" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Wishlist</a>
                   <a href="/cart" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Cart</a>
-                  <a href="#" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">User</a>
+                  <a href="/userProfile" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">User</a>
                   <a href="/login" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Logout</a>
                 </div>
               </div>
@@ -107,7 +108,8 @@
     <div class="sm:hidden" id="mobile-menu">
       <div class="space-y-1 px-2 pb-3 pt-2">
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-950 hover:bg-gray-700 hover:text-white" -->
-        <input class="rounded-full h-7 my-6 border-2 border-gray-300" type="text" placeholder="Search">
+        <input class="rounded-full h-7 my-6 border-2 border-gray-300" type="text">
+        <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Search</a>
         <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Wishlist</a>
         <a href="/cart" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Cart</a>
         <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">User</a>
