--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -18,12 +18,12 @@
     <h2 class="text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Register</h2>
   </div>
 
-  <div class="p-16 mt-10 sm:mx-auto sm:w-full sm:max-w-sm border-2 border-gray-300 bg-slate-100">
+  <div class="px-16 py-10 mt-5 sm:mx-auto sm:w-full sm:max-w-sm bg-slate-200">
     <form class="space-y-6" method="POST">
       <div>
         <label for="name" class="block text-sm font-medium leading-6 text-gray-900">Name</label>
         <div class="mt-2">
-          <input id="name" name="name" type="name" autocomplete="name" required class="block w-full border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          <input id="name" name="name" type="name" autocomplete="name" required class="h-7 block w-full border-2 border-gray-400 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
         </div>
       </div>
 
@@ -33,7 +33,7 @@
 
         </div>
         <div class="mt-2">
-          <input id="email" name="email" type="email" autocomplete="current-email" required class="block w-full border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          <input id="email" name="email" type="email" autocomplete="current-email" required class="h-7 block w-full border-2 border-gray-400 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
         </div>
       </div>
       <div>
@@ -42,7 +42,7 @@
 
         </div>
         <div class="mt-2">
-          <input id="phone" name="phone" type="phone" autocomplete="current-phone" required class="block w-full border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          <input id="phone" name="phone" type="phone" autocomplete="current-phone" required class="h-7 block w-full border-2 border-gray-400 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
         </div>
       </div>
       <div>
@@ -51,12 +51,21 @@
 
         </div>
         <div class="mt-2">
-          <input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          <input id="password" name="password" type="password" autocomplete="current-password" required class="h-7 h-7 block w-full border-2 border-gray-400  border-2 border-gray-400 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        </div>
+      </div>
+      <div>
+        <div class="flex items-center justify-between">
+          <label for="rePassword" class="block text-sm font-medium leading-6 text-gray-900">Repeat Password</label>
+
+        </div>
+        <div class="mt-2">
+          <input id="rePassword" name="rePassword" type="rePassword" autocomplete="current-rePassword" required class="h-7 block w-full border-2 border-gray-400 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
         </div>
       </div>
 
       <div class="flex">
-        <button type="submit" class="flex w-24 justify-center bg-green-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 rounded-full">Register</button>
+        <button type="submit" class="flex w-24 justify-center bg-green-300 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-green-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Register</button>
       </div>
     </form>
 <div class="flex-row ">
