--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -21,9 +21,9 @@
   <div class="p-16 mt-10 sm:mx-auto sm:w-full sm:max-w-sm border-2 border-gray-300 bg-slate-100">
     <form class="space-y-6" action="#" method="POST">
       <div>
-        <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
+        <label for="userName" class="block text-sm font-medium leading-6 text-gray-900">Username </label>
         <div class="mt-2">
-          <input id="email" name="email" type="email" autocomplete="email" required class="block w-full border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          <input id="userName" name="userName" type="userName" autocomplete="userName" required class="block w-full border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
         </div>
       </div>
 
@@ -40,7 +40,6 @@
       <div class="flex">
         <button type="submit" class="flex w-24 justify-center bg-yellow-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 rounded-full">Sign in</button>
 
-        <a href="./dashboard" class="text-xs italic pl-5 font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a>
       </div>
     </form>
 
