--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,8 +24,8 @@
   font-style: normal;
   font-variation-settings:
     "MONO" 1;
-}
-
+};
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
 </style>
 </head>
 <body>
@@ -71,7 +71,7 @@
                   <a href="/wishlist" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Wishlist</a>
                   <a href="/cart" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Cart</a>
                   <a href="/userProfile" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">User</a>
-                  <a href="/login" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Logout</a>
+                  <a href="/logout" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Logout</a>
                 </div>
               </div>
           <!-- Profile dropdown -->
