--- a/views/admin/product-add.ejs
+++ b/views/admin/product-add.ejs
@@ -27,14 +27,19 @@
               <!-- //catergory form for later -->
       
               <div class="sm:col-span-3">
-                <label for="productCategory" class="block text-sm font-medium leading-6 text-gray-900">Category</label>
+             
+                <label for="category" class="block text-sm font-medium leading-6 text-gray-900">Category</label>
+               
                 <div class="mt-2">
-                  <select id="productCategory" name="productCategory" autocomplete="productCategory-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
-                    <option>United States</option>
-                    <option>Canada</option>
-                    <option>Mexico</option>
+                    
+                  <select id="category" name="category" autocomplete="category-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
+                  <% categories.forEach(category => { %>
+                    <option class="text-gray-900"><%= category.categoryName %></option>
+                 
+                    <% }) %>
                   </select>
                 </div>
+               
               </div>
 
       
