--- a/views/admin/product-edit.ejs
+++ b/views/admin/product-edit.ejs
@@ -1,49 +1,101 @@
 <%- include('../partials/adminHeader') %>
 
-<main>
+<main> 
+    <form method="post" enctype="multipart/form-data">
+   
+        <div class="space-y-12 p-20 flex">
+         
+          <div class="border-b border-gray-900/10 pb-12">
 
-    <section class="w-full h-auto bg-blue-700 overflow-x-auto">
-        <div class="min-w-full">
-            <table class="min-w-full divide-y divide-gray-200">
-                <thead class="bg-gray-50">
-                    <tr>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Profile</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider font-sans">Name</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider font-sans">Email</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider font-sans">Phone</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider font-sans">Gender</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider font-sans">Action</th>
-                    </tr>
-                </thead>
-                <tbody class="bg-white divide-y divide-gray-200">
-                    <% users.forEach(user => { %>
-                    <tr>
-                        <td class="px-6 py-4 whitespace-nowrap">
-                            <button class="text-indigo-600 hover:text-indigo-900">Profile</button>
-                        </td>
-                        <td class="px-6 py-4 whitespace-nowrap text-sm" style="font-family: Didact Gothic, sans-serif;" ><%= user.name %></td>
-                        <td class="px-6 py-4 whitespace-nowrap text-sm"><%= user.email %></td>
-                        <td class="px-6 py-4 whitespace-nowrap text-sm"><%= user.phone %></td>
-                        <td class="px-6 py-4 whitespace-nowrap text-sm">Male</td>
-                        <td class="px-6 py-4">
-                            <a href="./user-delete/<%= user._id %>" class="font-medium text-red-950  hover:underline">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 text-red-600" >
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                              </svg>
-                              </a>
-                        </td>
-                    </tr>
-                    <% });%>
+           
+            <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+              <div class="sm:col-span-3">
+                <label for="prodcutName" class="block text-sm font-medium leading-6 text-gray-900">Product Name</label>
+                <div class="mt-2">
+                  <input value="<%= products[0].productName %>"  type="text" name="productName" id="prodcutName" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div class="sm:col-span-3">
+                <label for="productImage" class="block text-sm font-medium leading-6 text-gray-900">Product Image</label>
+                <div class="mt-2">
+                  <input value="<%= products[0].productImage %>" type="file" name="productImage" id="productImage" accept="image/*" autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div> 
 
-                </tbody>
-            </table>
+              <!-- <div class="sm:col-span-3">
+                <label for="productImage" class="block text-sm font-medium text-gray-700">Product Images</label>
+                <input type="file" id="productImage" name="productImage" accept="image/*" multiple class="mt-1 border-2 border-gray-700 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm">
+            </div>
+            <div> -->
+                
+              <!-- //catergory form for later -->
+      
+              <div class="sm:col-span-3">
+             
+                <label for="category" class="block text-sm font-medium leading-6 text-gray-900">Category</label>
+               
+                <div class="mt-2">
+                    
+                  <select id="category" name="category" autocomplete="category-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
+                  <% products[1].forEach(category => { %>
+                    <option class="text-gray-900"><%= category.categoryName %></option>
+                 
+                    <% }) %>
+                  </select>
+                </div>
+               
+              </div>
+
+      
+              <div class="sm:col-span-4">
+                <label for="description" class="block text-sm font-medium leading-6 text-gray-900">Description</label>
+                <div class="mt-2">
+                  <input value="<%= products[0].description %>"  id="description" name="description" type="text" autocomplete="description" class="block w-full border-0 py-16 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div class="sm:col-span-4">
+                <label for="brand" class="block text-sm font-medium leading-6 text-gray-900">Brand</label>
+                <div class="mt-2">
+                  <input value="<%= products[0].brand %>"  id="brand" name="brand" type="text" autocomplete="description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div class="sm:col-span-4">
+                <label for="color" class="block text-sm font-medium leading-6 text-gray-900">Color</label>
+                <div class="mt-2">
+                  <input value="<%= products[0].color %>"  id="color" name="color" type="text" autocomplete="color" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div class="sm:col-span-4">
+                <label for="price" class="block text-sm font-medium leading-6 text-gray-900">Price</label>
+                <div class="mt-2">
+                  <input value="<%= products[0].price %>"  id="price" name="price" type="number" autocomplete="price" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div class="sm:col-span-4">
+                <label for="size" class="block text-sm font-medium leading-6 text-gray-900">Size</label>
+                <div class="mt-2">
+                  <input value="<%= products[0].size %>"  id="size" name="size" type="number" autocomplete="size" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div class="sm:col-span-4">
+                <label for="stock" class="block text-sm font-medium leading-6 text-gray-900">Stock</label>
+                <div class="mt-2">
+                  <input value="<%= products[0].stock %>"  id="stock" name="stock" type="number" autocomplete="stock" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+
         </div>
-    </section>
-</main>
+      
+        <button type="submit" class="mt-5 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            Done
+        </button>
+        </div>
+        </div>
+      </form>
+  </main>
 
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="/OneCart/controllers/UserMangementConroller.js"></script>
 
 <script>
     // start: Sidebar
