--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -62,7 +62,7 @@
                     <div class="mt-4 flex justify-between">
                         <div>
                             <h3 class="text-sm text-gray-700">
-                                <a href="/product">
+                                <a href="/product/<%= product._id %>">
                                     <span aria-hidden="true" class="absolute inset-0"></span>
                                     <%= product.productName %>
                                 </a>
