--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -19,9 +19,9 @@
   </div>
 
   <div class="p-16 mt-10 sm:mx-auto sm:w-full sm:max-w-sm bg-slate-200">
-    <form class="space-y-6" action="#" method="POST">
+    <form class="space-y-6" method="post">
       <div>
-        <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
+        <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email</label>
         <div class="mt-2">
           <input id="email" name="email" type="email" autocomplete="email" required class="border-2 border-gray-500 h-8 block w-full py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
         </div>
@@ -38,7 +38,7 @@
       </div>
 
       <div class="flex">
-        <button type="submit" class="flex w-24 justify-center bg-green-300 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-green-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ">Sign in</button>
+        <button type="submit" class="flex w-24 justify-center bg-cyan-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-lime-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ">Sign in</button>
 
         <a href="/home" class="text-xs italic pl-5 font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a>
       </div>
